--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main id="main">
@@ -9,7 +10,7 @@
         <p>The man who saved a billion lives.</p>
         <div id="img-div">
             <img id="image"src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Image not loaded">
-            <caption id="img-caption"></caption>
+            <p id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
         </div>
         <div id="tribute-info">
             <h2>
@@ -38,7 +39,9 @@
 
 
         </div>
-        <p>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank"> Wikipedia entry</a>.</p>
+        <div id="last-line">
+            <p><strong>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank"> Wikipedia entry</a>.</strong></p>
+        </div>
     </main>
     
 </body>
